fix long message overflow display

--- a/frontend/src/features/messages/list/message-body.module.scss
+++ b/frontend/src/features/messages/list/message-body.module.scss
@@ -19,4 +19,12 @@
       text-decoration: underline;
     }
   }
+
+  div {
+    max-width: 100%;
+
+    span {
+      overflow-wrap: break-word;
+    }
+  }
 }
