--- a/frontend/src/features/messages/list/message-card.module.scss
+++ b/frontend/src/features/messages/list/message-card.module.scss
@@ -37,4 +37,5 @@
 
 .content {
   flex-grow: 1;
+  min-width: 0;
 }
